--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
       </section>
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
          © 2020 Copyright:
-         <a class="text-white" href="https://mdbootstrap.com/">NetflixIndia.com</a>
+         <a class="text-white" href="https://krishnapriyama.github.io/Netflix-clone/">NetflixIndia.com</a>
       </div>
    </footer>
 
